# Mandelbrot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mandel_shader.cpp  mandel_shader.h  mandel_shader_source.cpp  mandelbrot.cpp  mandelbrot.h
WindowsBuild/: README.txt  args.txt
glew/: LICENSE.txt
